Final demo (#57)
* AssignmentReadConverter makes calls to GitHub API

* SolvedAssignmentReadConverter uses updated AssignmentConverter

* ResultAssignmentReadConverter uses updated SolvedAssignmentConverter

* update shared-entities dependency

* integrate github question fetching

* update shared-entities dependency

* update shared-entities dependency

* add local demo DB seeding

* update URL to point to demo repo

* update Azure URL to point to new PostgreSQL server

* Create a CodeExecution interface

* update shared-entities dependency

* Create service for fetching Questions from repository

* update shared-entities dependency

* refactor Assessment DTOs to have commit hash

* refactor FrontMatter to Frontmatter

* update Assignment Read DTOs with reference answers

* create new converters for Assignment DTOs with reference answers

* create new converters for  for SolvedAssignment and ResultAssignment DTOs with reference answers

* Update services

* Update DummyDataLoader with User.oid

* Add AssessmentRepository.findAllByLatestTrue

* fix rendering Invites when non have been started

* remove GlobalExceptionHandler for debugging

* change back to  GET /assessment/{id} instead of GET/assessment/{tag}

* allow getPaginated to provide Example

* use new getPaginated to match a latest=true example for /assessment

* Make DummyDataLoader transactional

* Provide empty reference answers if none were parsed from the repo, instead of null

* add new demo seed

* fix DTOs

* split up template config to prepare for executor service activation request

* update shared-entities dependency

* update DummyDataLoader

* Quick fix for demo

* fix Jesse's hack

* make DummyDataLoader reusable again

* Add Everard user to DummyDataLoader

* fix result DTOs not having availablePoints

* fix email service not sending OffSetDateTime

* fix more bugs

* Quick fix for demo (#56)

* update azure URL in application-azure.properties to point to demo db

* fix not diffing user code/